Fix: Misaligned suggested actions

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -379,6 +379,10 @@
         }
     }
 
+    div.wc-message-groups.brandmessage-margin + .wc-suggested-actions {
+        bottom: 60px;
+    }
+
     .wc-message-group-content {
         overflow: hidden;
     }
